--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal(object):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self, name, size, weight, species, food_type, nocturnal):\n",
+    "        self.name = name\n",
+    "        self.size = size\n",
+    "        self.weight = weight\n",
+    "        self.species = species\n",
+    "        self.food_type = food_type\n",
+    "        self.nocturnal = nocturnal\n",
+    "       \n",
+    "    \n",
+    "    def sleep(self):\n",
+    "        print('Sleep during night')\n",
+    "        \n",
+    "    \n",
+    "    def eat(self):\n",
+    "        print('%s the %s thnks %s is yummy!' % (self.name, self.species, self.food_type))\n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -72,12 +89,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Elephant(Animal):\n",
-    "    pass"
+    "    \n",
+    "    def __init__(self, name, size, weight, species, food_type, nocturnal):\n",
+    "        super().__init__(name, size, weight, species, food_type, nocturnal)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elephat = Elephant('ele', 'big', 2134, 'mamal', 'grass', False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ele the mamal thnks grass is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "elephat.eat()"
    ]
   },
   {
@@ -294,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
